<resources>
    <string name="app_name">Who Goes First</string>
    <string name="team_2_s_name">Team 2\'s name</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="team_1_s_name">Team 1\'s name</string>
    <string name="select_random_team">Select random team</string>
    <string name="result_shown_here">Result shown here</string>
</resources>